// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox component Accepts custom styles 1`] = `
<div
  className="pretty-row"
>
  <input
    className="test-class"
    data-validity={true}
    id="checkbox"
    name="checkbox"
    onClick={[Function]}
    type="checkbox"
    value="Register"
  />
  ;
  <div
    className="pretty-validation"
    data-validity={true}
  >
    
  </div>
</div>
`;

exports[`Checkbox component Accepts data props 1`] = `
<div
  className="pretty-row"
  data-test="test"
>
  <input
    className="test-class"
    data-validity={true}
    id="checkbox"
    name="checkbox"
    onClick={[Function]}
    type="checkbox"
    value="Register"
  />
  ;
  <div
    className="pretty-validation"
    data-validity={true}
  >
    
  </div>
</div>
`;

exports[`Checkbox component Matches snapshot 1`] = `
<div
  className="pretty-row"
>
  <input
    className="pretty-checkbox"
    data-validity={true}
    id="checkbox"
    name="checkbox"
    onClick={[Function]}
    type="checkbox"
    value="Yes"
  />
  ;
  <div
    className="pretty-validation"
    data-validity={true}
  >
    
  </div>
</div>
`;

exports[`Checkbox component Renders required props 1`] = `
<div
  className="pretty-row"
>
  <input
    className="pretty-checkbox"
    data-validity={true}
    id="Subscribe"
    name="Subscribe"
    onClick={[Function]}
    type="checkbox"
    value="Yes"
  />
  ;
  <div
    className="pretty-validation"
    data-validity={true}
  >
    
  </div>
</div>
`;
